# transcribe

./: .gitignore  PLAN.md  README.md  docker-compose.yml  transcribe.py
services/asr/: Dockerfile  Dockerfile.api  pyproject.toml
services/asr/src/: config.py  database.py  main.py  models.py  service.py  worker.py
services/asr/src/routes/: v1.py
services/gateway/: Dockerfile
services/gateway/src/: main.py
services/gateway/src/static/: index.html
